syntax = "proto3";

package auth;

option go_package = "backend/proto";

import "google/protobuf/timestamp.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (TokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateSessionResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  rpc Logout(LogoutRequest) returns (SuccessResponse);
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string token = 1;
}

message UserResponse {
  uint64 id = 1;
  string username = 2;
  string role = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
}

message SuccessResponse {
  string message = 1;
}

message User {
  int64 id = 1;
  string username = 2;
  string role = 3;
  google.protobuf.Timestamp created_at = 4;
}

message GetUserProfileRequest {
  int64 user_id = 1;
}

message GetUserProfileResponse {
  User user = 1;
}

message SignInRequest {
  string username = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message SignUpRequest {
  string username = 1;
  string password = 2;
}

message SignUpResponse {
  int64 user_id = 1;
}

message ValidateSessionRequest {
  string token = 1;
}

message ValidateSessionResponse {
  bool valid = 1;
  int64 user_id = 2;
  string user_role = 3;
}